--- a/ActionsContentViewExample/res/values/strings.xml
+++ b/ActionsContentViewExample/res/values/strings.xml
@@ -16,7 +16,7 @@
 <resources>
     <string name="app_name">ActionsContentView Example</string>
     <string name="link_to_sources">source code is here &#187;</string>
-    <string name="about_details"><b>ActionsContentView</b> is an standalone library implements actions/content swiping view (AKA Side Navigation UI Pattern, AKA Facebook side menu). The library doesn\'t use any specific code introduced in new Android SDK versions. This allows develop an application with an action/content swiping view for every version of Android from 2.2 and up.</string>
+    <string name="about_details"><b>ActionsContentView</b> is an standalone library implements actions/content swiping view (AKA Side Navigation UI Pattern, AKA Facebook side menu). The library doesn\'t use any specific code introduced in new Android SDK versions. This allows develop an application with an action/content swiping view for every version of Android from 2.2 and up.\n\nThis application shows abilities of the library and allows you to play with some values of ActionsContentView control.</string>
     <string name="about_play">Play in sandbox</string>
     <string name="about_tutorial">View tutorial page</string>
     <!-- Setting strings -->
@@ -27,4 +27,9 @@
     <string name="pref_shadow">Shadow settings</string>
     <string name="pref_show_shadow">Show shadow</string>
     <string name="pref_shadow_width">Shadow width</string>
+    <string name="pref_fade">Fade settings</string>
+    <string name="pref_fade_type">Fade type</string>
+    <string name="pref_fade_max_value">Fade max value</string>
+    <string name="pref_other">Other</string>
+    <string name="pref_other_fling_duration">Fling duration</string>
 </resources>
