--- a/ActionsContentViewExample/res/values/strings.xml
+++ b/ActionsContentViewExample/res/values/strings.xml
@@ -36,5 +36,14 @@
     <string name="pref_swiping_edge_width">Swiping edge width</string>
     <string name="pref_other">Other</string>
     <string name="pref_other_fling_duration">Fling duration</string>
+    <!-- Action titles -->
+    <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
+    <string name="action_sandbox">Sandbox</string>
+    <string name="action_effects">Effects</string>
+    <string name="action_bookmarks">Bookmarks</string>
+    <!-- Effects -->
+    <string name="effect_parallax">Parallax</string>
+    <string name="effect_replace">Replace</string>
 
 </resources>
