- alpha effect was implemented. there is issue with touching actions though content view though.

--- a/ActionsContentViewExample/res/values/strings.xml
+++ b/ActionsContentViewExample/res/values/strings.xml
@@ -45,5 +45,6 @@
     <!-- Effects -->
     <string name="effect_parallax">Parallax</string>
     <string name="effect_replace">Replace</string>
+    <string name="effect_alpha">Alpha</string>
 
 </resources>
