- duration and alpha animations were implemented

--- a/ActionsContentViewExample/res/values/strings.xml
+++ b/ActionsContentViewExample/res/values/strings.xml
@@ -46,5 +46,6 @@
     <string name="effect_parallax">Parallax</string>
     <string name="effect_replace">Replace</string>
     <string name="effect_alpha">Alpha</string>
+    <string name="effect_duration">Duration</string>
 
 </resources>
