--- a/ActionsContentViewExample/res/values/strings.xml
+++ b/ActionsContentViewExample/res/values/strings.xml
@@ -48,5 +48,6 @@
     <string name="effect_alpha">Alpha</string>
     <string name="effect_duration">Duration</string>
     <string name="effect_bounce">Bounce</string>
+    <string name="effect_overshot">Overshot</string>
 
 </resources>
